# robot_final

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_final_bringup/share/robot_final_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/hospital_bt_nav/: package.xml  setup.cfg  setup.py
src/hospital_bt_nav/hospital_bt_nav/: bt_navigator.py
src/hospital_service/: package.xml  setup.cfg  setup.py
src/hospital_service/hospital_service/: nurse_bot.py
src/keyboard_controller/: package.xml  setup.py
src/keyboard_controller/keyboard_controller/: keyboard_node.py
src/limo_controller/: package.xml  setup.cfg  setup.py
src/limo_controller/limo_controller/: limo_speed_ctrl.py
src/py_bt_ros/: config.yaml  start_hospital.sh
src/py_bt_ros/modules/: bt_constructor.py  ros_bridge.py
src/py_bt_ros/scenarios/limo_nav2/: bt_nodes.py  (+3 more)
src/qr_scanner/: package.xml  setup.py
src/qr_scanner/qr_scanner/: qr_scanner_node.py
src/robot_final_bringup/: package.xml  setup.cfg  setup.py
src/robot_final_hri/: setup.cfg  setup.py
src/robot_final_navigation/: package.xml  setup.cfg  setup.py
src/robot_final_navigation/launch/: slam_nav2_rviz.launch.py
src/robot_final_perception/: package.xml  setup.cfg  setup.py
src/text_to_speecp_pkg/: package.xml  setup.cfg  setup.py
src/text_to_speecp_pkg/text_to_speech_pkg/: text_to_speech.py
src/url_launcher/: package.xml  setup.cfg  setup.py
src/url_launcher/launch/: qr_launch.launch.py
src/url_launcher/url_launcher/: url_launcher_node.py
(+17 files in other folders)
