<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>url_launcher</name>
  <version>0.0.0</version>
  <description>URL Launcher Node for QR-based Hospital Navigation Robot</description>

  <maintainer email="tlathwls0518@gmail.com">jinshim</maintainer>
  <license>Apache License 2.0</license>

  <!-- 실행에 필요한 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- 테스트 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

